--- a/README
+++ b/README
@@ -1,3 +1,6 @@
+To download the data used in the experiments section, visit the following [link](https://www.dropbox.com/s/or53oy3kyv5zuzp/CollisionScenarioData.zip?dl=0)
+
+
 Three Jupyter notebooks are provided. These are:
 single_scenario_analysis
 normalized_collisions
