--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-To download the data used in the experiments section, visit the following: [https://www.dropbox.com/s/or53oy3kyv5zuzp/CollisionScenarioData.zip?dl=0](link)
+To download the data used in the experiments section, visit the following link: [https://www.dropbox.com/s/or53oy3kyv5zuzp/CollisionScenarioData.zip?dl=0]
 
 
 Three Jupyter notebooks are provided. These are:
